--- a/web_dynamic/templates/1-hbnb.html
+++ b/web_dynamic/templates/1-hbnb.html
@@ -41,7 +41,8 @@
 	  <div class="popover">
 	    <ul>
 	      {% for amenity in amenities %}
-	      <li><input type="checkbox"> {{ amenity.name }} </li>
+	      <li> {{ amenity.name }} </li>
+		  <input type="checkbox" data-id="{{ amenity.id }}" data-name="{{ amenity.name }}">{{ amenity.name }}
 	      {% endfor %}
 	    </ul>
 	  </div>
