--- a/web_dynamic/templates/1-hbnb.html
+++ b/web_dynamic/templates/1-hbnb.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" type="text/css" href="../static/styles/6-filters.css">
     <link type="text/css" rel="stylesheet" href="../static/styles/8-places.css">
     <link rel="icon" href="../static/images/icon.png" />
+    <script src="../static/scripts/1-hbnb.js?{{ cache_id }}"></script>
     <title>HBnB</title>
-	<script src="../scripts/1-hbnb.js?{{ cache_id }}"></script>
   </head>
   <body>
     <header>
@@ -41,9 +41,7 @@
 	  <div class="popover">
 	    <ul>
 	      {% for amenity in amenities %}
-	      <li>
-		  <input type="checkbox" data-id=":amenity_id" data-name=":amenity_name" left="10px">{{ amenity.name }}
-		  </li>
+		  <li> <input type="checkbox" data-id="{{ amenity.id }}" data-name="{{ amenity.name }}"> {{ amenity.name }}</li>
 		  {% endfor %}
 	    </ul>
 	  </div>
