--- a/web_dynamic/static/styles/3-header.css
+++ b/web_dynamic/static/styles/3-header.css
@@ -9,3 +9,12 @@ header .logo {
     left: 20px;
     height: 100%;
 }
+header #api_status{
+    position: absolute;
+    top: 10px;
+    padding: 20px;
+    background-color: #cccccc;
+    border-radius: 40px;
+    right: 30px;
+    vertical-align: middle;
+}
